# video-to-image-frames

./: .gitignore  README.md  pyproject.toml
src/: video_frame_extractor.py
tests/: run_tests.py  test_video_frame_extractor.py
