[tool.poetry]
name = "video-frame-extractor"
version = "0.1.0"
description = ""
authors = ["chingkhei-th <chingkhei.thoudam@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
